--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototype">
-        <activity android:name=".restaurant"></activity>
+        <activity android:name=".Matches"></activity>
+        <activity android:name=".restaurant" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
