--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototype">
-        <activity android:name=".Matches"></activity>
+        <activity android:name=".settings"></activity>
+        <activity android:name=".startscreen" />
+        <activity android:name=".register" />
+        <activity android:name=".Matches" />
         <activity android:name=".restaurant" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -20,7 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".restaurant_screen" />
     </application>
 
 </manifest>
