--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototype">
-        <activity android:name=".SwipeActivity"></activity>
+        <activity android:name=".map"></activity>
+        <activity android:name=".SwipeActivity" />
         <activity android:name=".settings" />
         <activity android:name=".startscreen" />
         <activity android:name=".register" />
