--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototype">
-        <activity android:name=".map"></activity>
         <activity android:name=".SwipeActivity" />
         <activity android:name=".settings" />
-        <activity android:name=".startscreen" />
+        <activity android:name=".map" />
         <activity android:name=".register" />
         <activity android:name=".Matches" />
         <activity android:name=".restaurant" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".startscreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
