--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.5'
+
+        // Import the BoM for the Firebase platform
+        implementation platform('com.google.firebase:firebase-bom:26.4.0')
+
+        // Declare the dependency for the Realtime Database library
+        // When using the BoM, you don't specify versions in Firebase library dependencies
+        implementation 'com.google.firebase:firebase-database'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
