--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Prototype">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".SwipeActivity" />
-        <activity android:name=".settings" />
-        <activity android:name=".map" />
-        <activity android:name=".register" />
-        <activity android:name=".Matches" />
-        <activity android:name=".restaurant" />
-        <activity
             android:name=".startscreen"
             android:label="@string/app_name">
             <intent-filter>
@@ -27,6 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".login" />
+        <activity android:name=".SwipeActivity" />
+        <activity android:name=".settings" />
+        <activity android:name=".map" />
+        <activity android:name=".register" />
+        <activity android:name=".Matches" />
+        <activity android:name=".restaurant" />
     </application>
 
 </manifest>
