--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //card swipe dependencies
-    //implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    //implementation 'com.google.android.material:material:1.1.0'
-    //implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
 
 }
