--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,8 @@ dependencies {
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
-    //card swipe dependencies
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
+    //new card swipe dependencies
+    implementation 'com.lorentzos.swipecards:library:1.0.9'
+
 
 }
