--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
 
+    //GMail sign in authentication dependencies
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+
+    // Declare the dependencies for the desired Firebase products without specifying versions
+    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+
+
+
 }
