--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation platform('com.google.firebase:firebase-bom:26.5.0')
 
+    //google sign in auth
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
 
 
 }
