--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAUN_faPdp1Uw1W_zZ4Q2yu8QspSDgR_wQ"/>
 
         <activity
             android:name=".startscreen"
@@ -32,7 +34,6 @@
         <activity android:name=".register" />
         <activity android:name=".Matches" />
         <activity android:name=".restaurant" />
-
     </application>
 
 </manifest>
