--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".register" />
         <activity android:name=".Matches" />
         <activity android:name=".restaurant" />
+        <activity android:name=".changeEmail" />
     </application>
 
 </manifest>
