search and user database

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
 
     //google sign in auth
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    //for search
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
 
     //for set up of Java SDK
     //this breaks a lot of stuff in logging in
