--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".profile"></activity>
+        <activity android:name=".UserActivity"></activity>
+        <activity android:name=".profile" />
         <activity android:name=".AddFriend" />
         <activity android:name=".friends" />
 
