--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="Release"
     package="com.example.prototype">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -18,6 +20,7 @@
         <activity android:name=".profile" />
         <activity android:name=".AddFriend" />
         <activity android:name=".friends" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
