--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_baseline_fastfood_24"
+        android:icon="@mipmap/mealmatch"
+        android:roundIcon="@mipmap/mealmatch_round"
         android:label="Meal Match"
-        android:roundIcon="@drawable/ic_baseline_fastfood_24"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".UserActivity"></activity>
